# spam-eventsourcing

./: pyproject.toml
docs/: Makefile
docs/source/: conf.py  index.md
docs/source/sections/: events.md  intro.md  models.md
src/spam_eventsourcing/core/: enums.py
src/spam_eventsourcing/core/company/: aggregate.py
src/spam_eventsourcing/core/employee/: aggregate.py
tests/aggregate/: test_company.py
