[tool.poetry]
name = "spam-eventsourcing"
version = "0.1.0"
description = "Spam system using event sourcing as source of truth"
authors = ["joyanedel"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
eventsourcing = "^9.2.22"
sqlmodel = "^0.0.14"
uvicorn = "^0.27.1"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
furo = "^2024.1.29"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2024.2.4"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib"
]
